--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 title: "Casmo Blog"
 languageCode: "zh-CN"
-baseurl: "http://pengpaige.github.io/Blog"
+baseurl: "http://pengpaige.github.io/BlogDeployed"
 copyright: "Copyright (c) 2015. All rights reserved."
 theme: "hugo-rapid-theme"
 MetaDataFormat: "yaml"
@@ -19,10 +19,10 @@ Taxonomies:
   category: "categories"
 params:
   CopyrightHTML: "Copyright &#xA9; 2015. All Rights Reserved."
-  GitHubUser: "coderzh"
+  GitHubUser: "pengpaige"
   SidebarRecentLimit: 5
   DateForm : "2016年03月10日"
-  Tagline: "相当程序员不成的苦苦挣扎"
+  Tagline: "想当程序员不成的苦苦挣扎"
   Description: "如果你没有感觉到时间不够用时，你多半正在虚度光阴。"
   Keywords: "独立博客,程序员,思考,学习笔记"
   Categories:
