--- a/themes/hugo-rapid-theme/config.yaml
+++ b/themes/hugo-rapid-theme/config.yaml
@@ -1,6 +1,6 @@
 title: "Casmo Blog"
 languageCode: "zh-CN"
-baseurl: "http://pengpaige.github.io/Blog"
+baseurl: "http://pengpaige.github.io/BlogDeployed"
 copyright: "Copyright (c) 2015. All rights reserved."
 theme: "hugo-rapid-theme"
 MetaDataFormat: "yaml"
@@ -19,7 +19,7 @@ Taxonomies:
   category: "categories"
 params:
   CopyrightHTML: "Copyright &#xA9; 2015. All Rights Reserved."
-  GitHubUser: "coderzh"
+  GitHubUser: "pengpaige"
   SidebarRecentLimit: 5
   DateForm : "2016年03月10日"
   Tagline: "相当程序员不成的苦苦挣扎"
