--- a/themes/hugo-rapid-theme/theme.toml
+++ b/themes/hugo-rapid-theme/theme.toml
@@ -5,7 +5,7 @@ name = "rapid"
 license = "MIT"
 licenselink = "https://github.com/coderzh/hugo-theme-rapid/blob/master/LICENSE.md"
 description = ""
-homepage = "http://blog.coderzh.com/"
+homepage = "http://pengpaige.github.io/BlogDeployed"
 tags = ["", ""]
 features = ["", ""]
 min_version = 0.14
